cluster/kube-system/traefik/dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  routes:
  - match: Host(`traefik.holthome.net`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    # middlewares:
    # - name: internal
    # - name: traefik-forward-auth@kubernetescrd
  # tls:
  #   secretName: acme-crt-secret
